--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: "https://treehouse.co" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://homezoo.co" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
-title: "Treehouse" # the name of your site, e.g. ACME Corp.
+title: "Home Zoo" # the name of your site, e.g. ACME Corp.
 logo: '/assets/img/logo.png'
 logo_svg: '/assets/img/logo.svg'
 icon: '/assets/img/01.png'
@@ -45,12 +45,12 @@ collections:
 
 # Author Settings
 author:
-  name: TreeHouse.co
+  name: HomeZoo.co
   image: '/assets/img/logo.png'
   logo: '/assets/img/logo.png'
-  job: TreeHouse
+  job: HomeZoo
   bio: Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.
-  email: hello@treehouse.co
+  email: hello@homezoo.co
 
 plugins:
   - jekyll-sitemap
@@ -63,17 +63,17 @@ ampdir: amp
 
 seo:
   organization:
-    name: Treehouse.co
+    name: HomeZoo.co
     same_as:
     logo:
-      url: 'https://treehouse.co/assets/img/logo.png'
+      url: 'https://homezoo.co/assets/img/logo.png'
       width: 512
       height: 512
   website:
-    name: Treehouse.co
+    name: HomeZoo.co
   person:
-    name: Treehouse
-    id: 'author/treehouse'
+    name: HomeZoo.co
+    id: 'author/homezoo'
 
 defaults:
   #languages
