--- a/_data/map.yml
+++ b/_data/map.yml
@@ -1,6 +1,6 @@
 ---
 - us: _posts/us/2020-08-07-modern-hallway-4-interesting-ideas-for-a-hallway.md
-  pl: _posts/pl/2020-06-26-nowoczesny-przedpokoj-4-ciekawe-aranzacje-sciany-w-przedpokoju
+  pl: _posts/pl/2020-06-26-nowoczesny-przedpokoj-4-ciekawe-aranzacje-sciany-w-przedpokoju.md
   de: _posts/de/2020-08-07-moderner-flur-4-interessante-ideen-fur-einen-flur.md
   es: _posts/es/2020-08-07-pasillo-moderno-4-ideas-interesantes-para-un-pasillo.md
   fr: _posts/fr/2020-08-07-un-couloir-moderne-4-idees-interessantes-pour-un-couloir.md
